tests/rename/should_compile/GADTNullaryRecordWildcard.hs
{-# LANGUAGE GADTSyntax #-}
{-# LANGUAGE RecordWildCards #-}

module GADTNullaryRecordWildcard where

data X a where
  X :: X a

f X {..} = ()
